fix #15 to use .format for Java 8